# micha-ai

./: .gitignore  README.md  pyproject.toml
micha_ai/: .env  main.py  prompt.py
utils/: assistant-3712-fd3ad7d8e249.json  compilevid.py  imgaud2vid.py  text2speech.py  video2avatar.py
