[tool.poetry]
name = "micha-ai"
version = "0.1.0"
description = ""
authors = ["nour-bouzid <nour.bouzid@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
celery = "^5.3.5"
eventlet = "^0.33.3"
websockets = "^12.0"
asyncio = "^3.4.3"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
