[tool.poetry]
name = "micha-ai"
version = "0.1.0"
description = ""
authors = ["nour-bouzid <nour.bouzid@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
asyncio = "^3.4.3"
langchain = "^0.0.337"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
